--- a/styles/style.css
+++ b/styles/style.css
@@ -13,24 +13,23 @@ html {
 }
 
 body {
-  width: 600px;
-  margin: 0 auto;
-  background-color: #FF9500;
+  background-color: white;
   /*上右下左*/
-  padding: 0 20px 60px 60px;
-  border: 5px solid black;
+  left: 0px;
 }
 
 h1 {
   font-size: 40px;
   text-align: center;
+  color:red;
 }
 
-p, li {
+p {
   font-size: 16px;
   /* line-height 后而可以跟不同的参数，如果是数字，就是当前字体大小乘上数字 */    
   line-height: 2;
   letter-spacing: 1px;
+  color:brown;
 }
 
 img {
@@ -38,3 +37,277 @@ img {
   display: block;
   margin: 0 auto;
 }
+
+li {
+  list-style-type: none;/* 去掉li前的点 */
+}
+
+* {
+  margin: 0 auto;
+  padding: 0px;
+}
+
+div {
+  display: block;
+}
+
+.mod_header {
+  position: relative;
+  z-index: 4;
+  width: 100%;
+  height: 142px;
+  margin: 0 auto;
+}
+
+.section_inner {
+  padding-top: 90px;
+  margin: 0px 50px;
+}
+
+.logo {
+  position: absolute;
+  left: 80px;
+  top: 9px;
+}
+
+/* 一级导航 */
+
+.navi {
+  position: absolute;
+  left: 198px;
+  top: 0;
+}
+
+.navi_item {
+  position: relative;
+  float: left;
+}
+
+.navi_link {
+  display: block;
+  padding: 0 30px;
+  line-height: 90px;
+  height: 90px;
+  text-align: center;
+  font-size: 18px;
+  color: black;
+  text-decoration: none;/*去掉下划线*/
+}
+
+.navi_link:hover {
+  color: #31c27c;
+}
+
+.navi_link--current  {
+  background-color: #31c27c;
+  color: #fff;
+}
+
+.navi_link--current:hover {
+  background-color: #31c27c;
+  color: #fff;
+}
+
+/* 设置 */
+.select {
+  float: left;
+  position: absolute;
+  height: 90px;
+  font-size: 13px;
+  margin-top: 24px;
+  width: 122px;
+  display: block;
+  left: 800px;
+  top: 0px;
+}
+
+.select_choose {
+  background-color: #31c27c;
+  color: #fff;
+  display: block;
+  line-height: 38px;
+  padding: 0 15px 0 10px;
+  text-align: center;
+  white-space: nowrap;
+  border: 1px solid #c9c9c9;
+  border-radius: 3px;
+  text-decoration: none;
+}
+
+/* 二级导航 */
+.sub_navi {
+  height: 51px;
+  line-height: 51px;
+  border-top: 1px solid #f2f2f2;
+  padding-left: 210px;
+  margin-right: 50px;
+}
+
+.sub_navi_item {
+  float: left;
+  font-size: 15px;
+  margin-right: 50px;
+}
+
+.sub_navi_link {
+  display: block;
+  color: #000;
+  text-decoration: none;
+}
+
+.sub_navi_link:hover {
+  color:  #31c27c;
+}
+
+.sub_navi_link--current {
+  color: #31c27c;
+}
+
+/* 照片墙 */
+.photo-wall {
+  width: 100%;
+  height: 500px;
+  background-color: #f3f3f3;
+  margin: 0 auto;
+  position: relative; 
+}
+
+/* 总高100px */
+.photo-title {
+  width: 100%;
+  height: 50px;
+  padding-top: 50px;
+  margin: 0 auto;
+}
+
+.photo-title .title {
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  height: 50px;
+  font-size: 28px;
+  text-align: center;
+}
+
+.photo-list {
+  width: 100%;
+  height: 60px;
+  margin: 0 auto;
+}
+
+.photo-list ul {
+  width: 400px;
+  height: 60px;
+  margin: 0 auto;
+}
+
+.photo-list ul li {
+  float: left;
+  padding-left: 55px;
+  text-align: center;
+  line-height: 60px;
+  list-style: none;
+}
+
+.photo-list ul li a {
+  text-decoration: none;
+  font-size: 15px;
+  color: black;
+}
+
+.photo-list ul li a:hover {
+  cursor: pointer;
+  color: #31c27c;
+}
+
+
+/* 歌单推荐轮播图 */
+
+/* 歌单轮播图的div */
+.photo-wall .swiper-container {
+  width: 800px;
+  height: 300px;
+  margin: 0 auto;
+}
+
+/* 可视窗口 */
+.photo-wall .swiper-container .swiper-wrapper {
+  width: 800px;
+  height: 300px;
+  margin: 0 auto;
+}
+
+/* 图片容器 */
+.photo-wall .swiper-container .swiper-wrapper .swiper-slide {
+  width: 800px;
+  height: 300px;
+  float: left;
+}
+
+.photo-wall .swiper-container .swiper-wrapper .swiper-slide ul li {
+  list-style: none;
+  float: left;
+  margin-left: 50px;
+}
+
+.photo-wall .swiper-container .swiper-wrapper .swiper-slide ul li img {
+  height: 200px;
+  width: 135px !important;
+  float: left;
+
+}
+
+/* 播放量 */
+.photo-wall .swiper-container .swiper-wrapper .swiper-slide ul li p {
+  font-size: 14px;
+  margin-top: 210px;
+  line-height: 30px;
+  color: #000;
+  text-decoration: none;
+  margin-bottom: 10px;
+  left:0px;
+  width: 135px !important;
+}
+
+.photo-wall .swiper-container .swiper-wrapper .swiper-slide ul li p:hover {
+  color: #31c27c;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.photo-wall .swiper-container .swiper-wrapper .swiper-slide ul li a {
+  color: #999;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  height: 22px;
+  padding-top: 10px;
+}
+
+.photo-wall .swiper-container .swiper-wrapper .swiper-slide ul li a:hover {
+  cursor: pointer;
+}
+
+/* 分页器 */
+.photo-wall .swiper-pagination {
+  position: relative;
+  width: 100px;
+}
+
+/* 导航器 */
+.photo-wall .swiper-button-next,
+.photo-wall .swiper-button-prev {
+  color: #383838;
+  background-color: #ededed;
+  width: 50px;
+  height: 100px;
+  top: 40%;
+}
+
+.swiper-button-next:hover, .swiper-button-prev:hover {
+  background-color: #e0e0e0;
+}
+
+
+
+
