--- a/styles/style.css
+++ b/styles/style.css
@@ -67,7 +67,8 @@ div {
 .logo {
   position: absolute;
   left: 80px;
-  top: 9px;
+  top: 11px;
+  width: 20px;
 }
 
 /* 一级导航 */
@@ -209,13 +210,18 @@ div {
   list-style: none;
 }
 
-.photo-list ul li a {
+.photo_list_link {
   text-decoration: none;
   font-size: 15px;
   color: black;
 }
 
-.photo-list ul li a:hover {
+.photo_list_link:hover {
+  cursor: pointer;
+  color: #31c27c;
+}
+
+.photo_list_link--current {
   cursor: pointer;
   color: #31c27c;
 }
