--- a/styles/style.css
+++ b/styles/style.css
@@ -204,21 +204,118 @@ div {
 
 .photo-list ul li {
   float: left;
-  padding-left: 55px;
+  padding-left: 10px;
   text-align: center;
   line-height: 60px;
-  list-style: none;
+  list-style: none; 
 }
 
 .photo_list_link {
+  position: relative;
+  display: inline-block;
   text-decoration: none;
   font-size: 15px;
-  color: black;
+  color: #03e9f4;
+  transition: 1s;
+  padding: 5px 25px;
+  overflow: hidden;
+  letter-spacing: 4px;
+  font-weight: bold;
 }
 
 .photo_list_link:hover {
   cursor: pointer;
-  color: #31c27c;
+  background: #03e9f4;
+  color: #050801;
+  box-shadow: 0 0 5px #03e9f4,
+              0 0 25px #03e9f4,
+              0 0 50px #03e9f4,
+              0 0 200px #03e9f4;
+  -webkit-box-reflect:below 1px linear-gradient(transparent, #0005);
+}
+
+.photo_list_link:nth-child(1){
+  filter: hue-rotate(310deg);
+}
+.photo_list_link:nth-child(2){
+  filter: hue-rotate(210deg);
+}
+.photo_list_link:nth-child(3){
+  filter: hue-rotate(110deg);
+}
+.photo_list_link span{
+  position: absolute;
+  display: block;
+}
+
+.photo_list_link span:nth-child(1){
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(90deg,transparent,#03e9f4);
+  animation: animate1 1s linear infinite;
+}
+@keyframes animate1{
+  0%{
+      left: -100%;
+  }
+  50%,100%{
+      left: 100%;
+  }
+}
+.photo_list_link span:nth-child(2){
+  top: -100%;
+  right: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(180deg,transparent,#03e9f4);
+  animation: animate2 1s linear infinite;
+  animation-delay: 0.25s;
+}
+@keyframes animate2{
+  0%{
+      top: -100%;
+  }
+  50%,100%{
+      top: 100%;
+  }
+}
+.photo_list_link span:nth-child(3){
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 2px;
+  background: linear-gradient(270deg,transparent,#03e9f4);
+  animation: animate3 1s linear infinite;
+  animation-delay: 0.50s;
+}
+@keyframes animate3{
+  0%{
+      right: -100%;
+  }
+  50%,100%{
+      right: 100%;
+  }
+}
+
+.photo_list_link span:nth-child(4){
+  bottom: -100%;
+  left: 0;
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(360deg,transparent,#03e9f4);
+  animation: animate4 1s linear infinite;
+  animation-delay: 0.75s;
+}
+
+@keyframes animate4{
+  0%{
+      bottom: -100%;
+  }
+  50%,100%{
+      bottom: 100%;
+  }
 }
 
 .photo_list_link--current {
